# pixelize

./: CMakeLists.txt  README.md
src/: pixelize.cpp  pixelize.h  pixelize.test.cpp
